[sarthik]modified: swagger file
