# src/routes/notes.route.js
@@ -1,6 +1,7 @@
 import express from 'express';
 import * as notesController from '../controllers/notes.controller';
 import { userAuth } from '../middlewares/auth.middleware';
+import { getAllCatchedNotes } from '../utils/notes.util';
 
 const router = express.Router();
 
@@ -8,27 +9,27 @@ const router = express.Router();
 router.post('', userAuth, notesController.createNotes);
 
 // read notes
-router.get('/getAllNote', userAuth, notesController.getAllNotes);
+router.get('/getAllNote', userAuth, getAllCatchedNotes, notesController.getAllNotes);
 
 // read notes by id
 router.get('/getById/:id', userAuth, notesController.getById);
 
-// read notes 
+// read notes
 router.delete('/delete/:id', userAuth, notesController.deleteNote);
 
-// update notes 
+// update notes
 router.put('/update/:id', userAuth, notesController.updateNote);
 
-// isArchive 
+// isArchive
 router.put('/isArchive/:id', userAuth, notesController.isArchive);
 
-// isTrash 
+// isTrash
 router.put('/isTrash/:id', userAuth, notesController.isTrash);
 
-// set note color 
+// set note color
 router.put('/setColor/:id', userAuth, notesController.setColor);
 
-// add collaboration on a note 
+// add collaboration on a note
 router.put('/addCollab/:id', userAuth, notesController.addCollab);
 
 export default router;
